# simple-document

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: handoff_260203_1.md  llm-persona.md
examples/: example_all_blocks.py  example_output.md
src/simdoc/: __init__.py  _blocks.py  _errors.py  _io.py  _text.py  doc.py
src/simdoc/_render/: __init__.py  markdown.py
tests/: test_code_fences.py  test_golden_markdown.py  test_lists.py  test_tables.py
tests/fixtures/golden/: basic.md  code_fences.md  lists.md  tables.md
