[project]
name = "simple-document"
version = "0.1.0"
description = "A simple Python package for deterministic Markdown documents"
readme = "README.md"
requires-python = ">=3.13"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simdoc"]

[tool.pyright]
extraPaths = ["src"]
executionEnvironments = [
    { root = "examples", extraPaths = ["src"] },
    { root = "tests", extraPaths = ["src"] },
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "pytest>=9.0.2",
]
